--- a/index.html
+++ b/index.html
@@ -106,24 +106,15 @@
   </div>
   </div>
   </div>
-  <div class="image-wrapper" style="justify-content:center">
-    <div>
-      <a href="about.html"><img class="myimg" src="images\button\button1.jpg" /></a>
-    </div>
-    <div>
-      <a href="weekdays.html"><img class="myimg" src="images\button\button2.jpg" /></a>
-    </div>
-    <div>
-      <a href="report.html"><img class="myimg" src="images\button\button3.jpg" /></a>
-    </div>
-    <div>
-      <a href="nedd.html"><img class="myimg" src="images\button\button4.jpg" /></a>
-    </div>
-    <div>
-      <a href="team.html"><img class="myimg" src="images\button\button5.jpg" /></a>
-    </div>
-    <div>
-      <a href="contacts.html"><img class="myimg" src="images\button\button6.jpg" /></a>
+  <div class="bottom-menu">
+    <div class="bottom-menu container">
+      <a class="link" href="about.html">Про нас</a>
+      <a class="link" href="about.html">Нашi буднi</a>
+      <a class="link" href="about.html">Звiт</a>
+      <a class="link" href="about.html">Потреби</a>
+      <a class="link" href="about.html">Наша команда</a>
+      <a class="link" href="about.html">Контакти</a>
+
     </div>
   </div>
 
